0028353: Samples - IESample cannot write files to paths with special characters

Changed charcode conversion to UTF-8.